--- a/app/pug/blocks/_header.pug
+++ b/app/pug/blocks/_header.pug
@@ -57,10 +57,14 @@ header.header
                     | Win College Money
                 h2.people__h2   Win scholarship money or loan repayment Beginning May 2019, 100% Free - no catch
                 h3.people__h3  Education is expensive. We want to help. Join the wait list and get 10,000 virtual dollars in your trading account.
-                form(action="php/send-form.php" method="post" name="with-header" required).header__form
-                    input.header__form-input(type='email' name='email' placeholder='Email')
+                form.header__form
+                    input(type='hidden', name='project_name', value='SignumCitt')
+                    input(type='hidden', name='admin_email', value='sashaburlachenkon@gmail.com')
+                    input(type='hidden', name='form_subject', value='With header form')
+                    input.header__form-input(type='email' placeholder='Email')
                     button.header__form-btn(type='submit')
-                        |JOIN the Wait List
+                        | JOIN the Wait List
+
                 p.people__text We don’t spam you, but will alert you when starting awesome contests
             .people__img
                 img(src='img/svg/People-with-money.svg')
