--- a/app/pug/home.pug
+++ b/app/pug/home.pug
@@ -71,7 +71,7 @@ append content
             .testimonials__wrapper
                 h1.testimonials__h1 Testimonials
                 .testimonials__title Don't believe us?
-                    span  Well listen to our beta testers:
+                    span   Well listen to our beta testers:
                 .testimonials__items
                     each item in links
                         .testimonials__items-outer
@@ -87,12 +87,14 @@ append content
             .laptop__wrapper
                 .laptop__texts
                     .laptop__texts-text Please don’t make us beg, although
-                        br
-                        | we’re not beneath that.
-                    .laptop__texts-text You know you want those $10,000 virtual dollars.
-                    form.laptop__form
-                        input.laptop__form-input(type='email' placeholder='Email')
-                        button.laptop__form-btn(type='submit')
+                        span  we’re not beneath that.
+                    .laptop__texts-text-second You know you want those $10,000 virtual dollars.
+                    form#laptop__form.laptop__form
+                        input(type='hidden', name='project_name', value='Site Name')
+                        input(type='hidden', name='admin_email', value='admin@mail.com')
+                        input(type='hidden', name='form_subject', value='Form Subject')
+                        input.laptop__form-input(type='text', name='E-mail', placeholder='You E-mail...', required='')
+                        button.laptop__form-btn
                             | JOIN the Wait List
 
 
