--- a/app/sass/components/_footer.sass
+++ b/app/sass/components/_footer.sass
@@ -57,6 +57,17 @@
     @include media(375)
       margin-top: -6px
 
+  &__svg
+    transition: .3s
+
+    &:hover
+
+      & path
+        fill: #A6F8FF
+
+      & circle
+        stroke: #A6F8FF
+
 .copyright
   margin-top: 31px
   margin-right: 65px
