--- a/app/pug/home.pug
+++ b/app/pug/home.pug
@@ -90,10 +90,7 @@ append content
                         span  we’re not beneath that.
                     .laptop__texts-text-second You know you want those $10,000 virtual dollars.
                     form#laptop__form.laptop__form
-                        input(type='hidden', name='project_name', value='Site Name')
-                        input(type='hidden', name='admin_email', value='admin@mail.com')
-                        input(type='hidden', name='form_subject', value='Form Subject')
-                        input.laptop__form-input(type='text', name='E-mail', placeholder='You E-mail...', required='')
+                        input.laptop__form-input(type='text', placeholder='Email', required='')
                         button.laptop__form-btn
                             | JOIN the Wait List
 
