--- a/app/sass/components/_header.sass
+++ b/app/sass/components/_header.sass
@@ -79,10 +79,10 @@
     width: 100%
 
     @include media(1024)
-      margin-top: 23px
+      margin-top: 0
 
     @include media(375)
-      margin-bottom: 46px
+      margin-bottom: 72px
 
   &__mob-ul
     font-family: "Open Sans", sans-serif
@@ -139,7 +139,7 @@
 
 
   &-mob
-    margin-top: 49px
+    margin-top: 75px
 
   &-mob__link
     margin: 0 10px
@@ -251,8 +251,8 @@
   justify-content: space-between
   border: 1px solid #CDCDCD
 
-  &:hover:focus
-    border: 1px solid #000
+  //&:has( > &-input:focus)
+  //  border: 1px solid #000
 
   @include media(768)
     margin-top: 24px
@@ -267,12 +267,10 @@
     padding: 12px 16px
     font-weight: normal
     font-size: 18px
-    color: #175E65
+    color: #E5E5E5
 
-    &:focus
-
-      .header__form
-        border: 1px solid #000
+    &:focus .header__form
+      border: 1px solid #000
 
     &:focus
       color: #16A6B3
