--- a/app/sass/pages/_home.sass
+++ b/app/sass/pages/_home.sass
@@ -227,7 +227,7 @@
     padding: 12px 16px
     font-weight: normal
     font-size: 18px
-    color: #175E65
+    color: #E5E5E5
 
     &:focus
       color: #16A6B3
@@ -663,3 +663,15 @@
 
   &.show
     display: block
+
+.arow
+  opacity: 0.2
+  transition: .3s
+
+  &:hover
+    opacity: 1
+
+  &:active
+    opacity: 1
+
+
