--- a/app/sass/pages/_home.sass
+++ b/app/sass/pages/_home.sass
@@ -181,10 +181,16 @@
     margin-top: 107px
 
     @include media(1024)
+      margin-top: 84px
+
+    @include media(768)
       flex-direction: column
       margin: 0 auto
       margin-top: 120px
       letter-spacing: 0.1px
+
+    //@include media(1024)
+    //  margin-top: 75px
 
   &__form-h2
     color: #fff
@@ -334,6 +340,18 @@
       margin: 31px auto 20px
       font-size: 25px
 
+    @include media(812)
+      margin: 60px auto 20px
+
+    @include media(768)
+      margin: 133px auto 20px
+
+    @include media(667)
+      margin: 145px auto 20px
+
+    @include media(375)
+      margin: 30px auto 20px
+
   &__title
     font-family: "Open Sans", sans-serif
     font-size: 23px
@@ -428,11 +446,29 @@
       bottom: -30px
 
       @include media(1024)
-        right: 633px
-        bottom: 50px
+        right: 568px
+        bottom: 39px
         transform: rotate(180deg)
         z-index: -1
 
+      @include media(812)
+        right: 574px
+        bottom: 39px
+
+      @include media(640)
+        right: 1140px
+        bottom: 27px
+
+      @include media(375)
+        right: 1311px
+        bottom: 65px
+
+      @include media(360)
+        right: 1247px
+        bottom: 47px
+
+      @include media(320)
+        right: 808px
   &__text
     margin-top: 86px
     text-align: center
@@ -494,6 +530,9 @@
           margin: 6px
           background: #F86544
 
+      @include media(375)
+        margin-left: 12px
+
       .slick-active
 
         & button
@@ -519,7 +558,10 @@
     padding: 181px 0px 121px
 
     @include media(1024)
-      padding: 204px 0 52px
+      padding: 203px 0 52px
+
+    @include media(768)
+      padding: 206px 0 52px
 
     @include media(550)
       padding: 204px 0 26px
